# Birthday-Invite

./: README.md  __init__.py  pyproject.toml
static/css/: main.css  style.css  style_base.css
static/js/: address.js  fonts.js  google.js  home.js  input-dropdown.js  style.js
templates/: base.html  home.html  style.html  style_base.html
