[tool.poetry]
name = "Birthday-Invite"
version = "0.1.0"
description = ""
authors = ["tomgxz <tomgxz.dev@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Tomgxz/Birthday-Invite"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"